# dtrwm

./: Cargo.toml  LICENSE  build.rs
examples/: config.toml
protocols/: river-window-management-v1.xml  river-xkb-bindings-v1.xml
src/: config.rs  font.rs  layout.rs  main.rs  protocol.rs  spawn.rs
